# cpp-boilerplate

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: AddProjectTarget.cmake  AddProjectTestTarget.cmake  ProjectUtils.cmake
docs/: Build.md
src/: CMakeLists.txt
tests/: CMakeLists.txt
